scrollbar fixed

--- a/public/style.css
+++ b/public/style.css
@@ -3,3 +3,18 @@ margin: 0;
 font-family: 'Inter', sans-serif;
 
 }
+
+
+
+*::-webkit-scrollbar {
+    width: 5px;
+  }
+  *::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  }
+  
+  *::-webkit-scrollbar-thumb {
+  background-color: rgb(70, 49, 87);
+  outline: 1px solid rgb(49, 61, 73);
+  }
